# musetub

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users.py  8270a6586ae3_create_mvp_tables.py  b1f0c9c4a8c7_create_stream_credits.py  c3d7e1f5a9b2_add_thumbnail_cid.py
backend/app/: main.py
backend/app/api/: v1.py
backend/app/features/auth/: routes.py  schemas.py  services.py
backend/app/features/contact/: routes.py  schemas.py  services.py
backend/app/features/content/: routes.py  schemas.py
backend/app/features/creators/: routes.py  schemas.py
backend/app/features/payments/: routes.py  schemas.py
backend/app/features/users/: routes.py  schemas.py
backend/app/features/wallets/: routes.py  schemas.py
backend/app/platform/: config.py  redis.py
backend/tests/: test_db_smoke.py  test_health.py  test_ipfs.py  test_migrations.py
backend/tests/ai_agents/: test_content_analysis.py  test_moderation.py  test_negotiation.py  test_pricing.py  test_quality.py
backend/tests/auth/: test_auth_circle_live.py  test_auth_flow.py
backend/tests/content/: test_content_upload.py  test_stream_gating.py  test_x402_auto_pay.py
backend/tests/creators/: test_creator_dashboard.py
backend/tests/payments/: test_payments_flow.py
backend/tests/platform/: test_chain.py  test_circle_wallets_signing.py  test_inference.py  test_video_analysis.py
backend/tests/users/: test_user_dashboard.py
(+65 files in other folders)
